task5/k8/templates/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: k8s-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: k8s-program
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: user-service
                port:
                  number: 8083
            pathType: Prefix
            path: /user(/|$)(.*)           
          - backend:
              service:
                name: post-service
                port:
                  number: 8084
            pathType: Prefix
            path: /post(/|$)(.*)
